--- a/client/my-app/src/components/Nav.css
+++ b/client/my-app/src/components/Nav.css
@@ -10,8 +10,12 @@
   left: 0;
   z-index: 1000;
   padding: 12px 20px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+  box-shadow:
+    0 2px 10px rgba(0, 0, 0, 0.4),
+    0 0 15px rgba(255, 213, 0, 0.6);
+
   flex-wrap: wrap;
+
 }
 
 .logobox {
@@ -120,7 +124,7 @@
 
 .mobile-menu #signbtn {
   margin-top: -2px;
-  
+
 }
 
 /* Logged-in user section in desktop view */
@@ -262,7 +266,7 @@
   right: 0;
   background-color: #1e293b;
   border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
   display: none;
   flex-direction: column;
   min-width: 150px;
@@ -281,9 +285,10 @@
   cursor: pointer;
 }
 
-  .mobile-menu {
-    display: none;
-  }
+.mobile-menu {
+  display: none;
+}
+
 .user-dropdown a:hover,
 .user-dropdown button:hover {
   background-color: #334155;
@@ -295,16 +300,16 @@
   margin-top: 10px;
 }
 
-a{
+a {
   text-decoration: none;
   color: inherit;
 }
 
 #signbtn {
   color: white;
- background-color: #10b981;
+  background-color: #10b981;
   margin-top: 8px;
-  padding:10px 20px 10px 20px;
+  padding: 10px 20px 10px 20px;
 
   border: none;
   font-weight: bold;
@@ -316,7 +321,7 @@ a{
   color: white;
   background-color: #d42c2cee;
   margin-top: 8px;
-  padding:8px 20px 8px 20px;
+  padding: 8px 20px 8px 20px;
 
   border: none;
   font-weight: bold;
@@ -330,6 +335,7 @@ a{
     opacity: 0;
     transform: translateY(-10%);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -350,7 +356,8 @@ a{
   .reviewloginbox {
     gap: 10px;
   }
-   .mobile-menu {
+
+  .mobile-menu {
     display: none;
   }
 }
@@ -365,11 +372,13 @@ a{
 
   .centernav,
   .reviewloginbox {
-    display: none; /* hide main nav */
+    display: none;
+    /* hide main nav */
   }
 
   .hamburger {
-    display: block; /* show hamburger */
+    display: block;
+    /* show hamburger */
     position: absolute;
     right: 20px;
     top: 15px;
