--- a/client/my-app/src/components/Search.css
+++ b/client/my-app/src/components/Search.css
@@ -58,7 +58,7 @@
 /* === SEARCH BUTTON === */
 .search-button {
   height: 48px;
-  padding: 0 20px;
+  padding: 0 15px;
   font-size: 15px;
   background-color: #facc15;
   color: #1f2937;
@@ -177,17 +177,19 @@
   }
 
   .search-bar {
-    height: 55px;
+    height: 50px;
     padding: 12px 18px;
     font-size: 16px;
-    padding-right: 40px; /* space for clear icon */
+    padding-right: 40px; 
     box-sizing: border-box;
   }
 
   .search-button {
-    height: 56px;
+    height: 45px;
     font-size: 16px;
     border: none;
+    padding: 15px 15px;
+    margin-top: -2px;
   }
 
   .clear-icon {
