--- a/client/my-app/src/components/Nav.css
+++ b/client/my-app/src/components/Nav.css
@@ -8,7 +8,8 @@
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 10000;
+  height: 60px;
+  z-index: 8000;
   padding: 12px 20px;
   box-shadow:
     0 2px 10px rgba(0, 0, 0, 0.4),
@@ -16,29 +17,29 @@
 
   flex-wrap: wrap;
 
+
+}
+.logo-icon{
+    height: 50px;
+    width: 150px;
+    margin-right: 10px;
 }
 
-.logobox {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+
+
+#logo {
+  height: 180px;
+    margin-top: -50px;
 }
 
-.logobox img {
-  height: 40px;
-}
 
-.logobox h2 {
-  font-size: 22px;
-  font-weight: bold;
-  color: #f1f5f9;
-}
 
 /* Center nav buttons */
 .centernav {
   display: flex;
   align-items: center;
   gap: 20px;
+
 }
 
 .centernav button {
